# firmion

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.claude/: CLAUDE.md  settings.json
ast/: Cargo.toml  ast.rs  astdb.rs
astdb/: Cargo.toml  astdb.rs
const_eval/: Cargo.toml  const_eval.rs  linearizer.rs
diags/: depth_guard.rs  diags.rs
docs/: globj.md
docs/ai/: 02-system.yaml  03-structure.yaml  05-update-tracker.md
exec_phase/: Cargo.toml  exec_phase.rs
extensions/: Cargo.toml
extensions/src/: esp_checksum.rs  lib.rs  sha256.rs
extensions/std/crc32c/: Cargo.toml
extensions/std/crc32c/src/: crc32c.rs
extensions/std/esp_checksum/: Cargo.toml
extensions/std/esp_checksum/src/: esp_checksum.rs
extensions/std/md5/: Cargo.toml
extensions/std/md5/src/: md5.rs
extensions/std/sha256/: Cargo.toml
extensions/std/xor/: Cargo.toml
extensions/std/xor/src/: xor.rs
extensions/tests/: test_crc32c.rs  test_esp_checksum.rs  test_md5.rs  test_sha256.rs  test_xor.rs
firmion_extension/: Cargo.toml  extension_registry.rs  lib.rs  test_mocks.rs
ir/: ir.rs  symtable.rs
irdb/: Cargo.toml  irdb.rs  layoutdb.rs  objfile.rs  regiondb.rs
layout_phase/: Cargo.toml  layout_phase.rs
layoutdb/: Cargo.toml  layoutdb.rs
linearizer/: Cargo.toml  linearizer.rs
map_phase/: Cargo.toml  map_phase.rs
process/: Cargo.toml  process.rs
tests/: const_shl_err.firm  const_string_escape.firm  glob_test.elf  immediate_string_escape.firm  integration.rs  layout_shl_err.firm  region_default_pad_byte_1.firm  region_default_pad_byte_dup.firm  region_default_pad_byte_invalid.firm  region_default_pad_byte_non_numeric.firm  wrobj_elf.firm  wrobj_glob_bad_syntax.firm  wrobj_glob_err235.firm  wrobj_glob_file_excl.firm  wrobj_glob_sec.firm  wrobj_glob_sec_excl.firm  wrobj_glob_unknown_op.firm  wrobj_macho.firm  wrobj_pe.firm  wrobj_wasm.firm
validation_phase/: Cargo.toml  validation_phase.rs
