[package]
name = "firmion-extensions"
description = "Standard extension registration used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[features]
std-crc32c = ["dep:crc32c"]
std-sha256 = ["dep:sha2"]
std-md5 = ["dep:md-5"]
std-xor = []
std-esp-checksum = []

[dependencies]
firmion_extension = { workspace = true }
crc32c = { version = "0.6", optional = true }
md-5 = { version = "0.11", optional = true }
sha2 = { version = "0.11.0", optional = true }

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"

[lints]
workspace = true
