[package]
name = "firmion-extension"
description = "Extension API used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies]
tracing = "0.1.44"

[dev-dependencies]
tracing-subscriber = "0.3.22"

[lints]
workspace = true
