[package]
name = "firmion-irdb"
description = "Intermediate representation database used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "irdb.rs"

[dependencies]
anyhow = "1.0.34"
# local dependencies
diags = { workspace = true }
firmion_extension = { workspace = true }
indextree = "4.3.1"
ir = { workspace = true }
layoutdb = { workspace = true }
const_eval = { workspace = true }
objfile = { workspace = true }
parse_int = "0.9.0"

tracing = "0.1.44"

[lints]
workspace = true
