[package]
name = "firmion-layoutdb"
description = "Layout results database used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "layoutdb.rs"

[dependencies]
anyhow = "1.0.34"
ast = { workspace = true }



diags = { workspace = true }
indextree = "4.3.1"
ir = { workspace = true }
const_eval = { workspace = true }

tracing = "0.1.44"

[lints]
workspace = true
